--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/RentPackagesFrom.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/RentPackagesFrom.xaml
@@ -166,7 +166,7 @@
 
 
                 </Border>
-                <DataGrid x:Name="RentPackagesTable1" Margin="35,316,0,0" d:ItemsSource="{d:SampleData ItemCount=5}" Height="140" VerticalAlignment="Top" HorizontalAlignment="Left" Width="572" BorderBrush="#FF7AB3EF" Background="White"/>
+                <DataGrid x:Name="RentPackagesTable1" Margin="35,316,0,0" d:ItemsSource="{d:SampleData ItemCount=5}" Height="140" VerticalAlignment="Top" HorizontalAlignment="Left" Width="572" BorderBrush="#FF7AB3EF" Background="White" CanUserAddRows="False" CanUserDeleteRows="False"/>
                 <Button x:Name="btnInsert1"
                              
                     BorderThickness="0"
