--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/VehicleAvailableTable.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/VehicleAvailableTable.xaml
@@ -12,7 +12,7 @@
             <TextBlock HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" FontFamily="Montserrat" Text="Available Vehicles" VerticalAlignment="Center" Width="194" FontWeight="SemiBold" FontSize="20" Margin="90,0,0,0"/>
 
         </Grid>
-        <DataGrid x:Name="VehicleAvailableTable1" Margin="84,150,84,139" d:ItemsSource="{d:SampleData ItemCount=5}" BorderBrush="#FF1C6DD0" BorderThickness="2,2,2,2" SelectionChanged="VehicleAvailableTable1_SelectionChanged"/>
+        <DataGrid x:Name="VehicleAvailableTable1" Margin="30,150,30,29" d:ItemsSource="{d:SampleData ItemCount=5}" BorderBrush="#FF1C6DD0" BorderThickness="2,2,2,2" SelectionChanged="VehicleAvailableTable1_SelectionChanged" CanUserAddRows="False" CanUserDeleteRows="False"/>
 
     </Grid>
 </Window>
