--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/ManageDriverForm.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/ManageDriverForm.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VehicleRentalSystem_V1._0"
         mc:Ignorable="d"
-        Title="ManageDriverForm" Width="900" WindowStartupLocation="CenterScreen" Height="497" VerticalAlignment="Center" HorizontalAlignment="Center">
+        Title="ManageDriverForm" Width="900" WindowStartupLocation="CenterScreen" Height="522" VerticalAlignment="Center" HorizontalAlignment="Center">
     <ScrollViewer>
         <Border Height="698"
             Width="658" BorderThickness="3,3,3,3" BorderBrush="#FF1C6DD0" CornerRadius="15,15,15,15" Background="#FFEEF6FF" >
@@ -215,37 +215,6 @@
 
                 <!--Next-->
 
-                <TextBlock Text="Driver State"
-                    FontSize="12"
-                    Foreground="#FF1C6DD0"
-                    FontWeight="Bold"
-                    FontFamily="Montserrat"
-                    Margin="302,388,63,0" Height="12" VerticalAlignment="Top"/>
-
-                <Border CornerRadius="15"  
-                    BorderBrush="Black" 
-                    BorderThickness="2" 
-                    HorizontalAlignment="Left" 
-                    Width="250"
-                    Margin="290,404,0,0" Height="40" VerticalAlignment="Top" Background="White"
-                    >
-                    <TextBox x:Name="DriverState"
-                        FontSize="15"
-                        FontWeight="Medium"
-                        FontFamily="Century Gothic"
-                        TextAlignment="Left"
-                        Foreground="Black"
-                        CaretBrush="Gray"
-                        BorderBrush="White"
-                        BorderThickness="0,0,0,1"
-                        Margin="8,8,8,8"
-                             />
-
-
-
-
-                </Border>
-
                 <TextBlock Text="Vehicle Type"
                     FontSize="12"
                     Foreground="#FF1C6DD0"
@@ -369,17 +338,16 @@
                 </Grid>
                 <Border Width="138" Margin="53,485,389,91" Padding="2,2,2,2" BorderBrush="Black" BorderThickness="2,2,2,2" CornerRadius="15,15,15,15">
                     <Grid Margin="22,6,18,1">
-                        <RadioButton x:Name="CarCheckBox" Content="Car" HorizontalAlignment="Left" VerticalAlignment="Top" Checked="CarCheckBox1_Checked"/>
-                        <RadioButton x:Name="BikeCheckBox" Content="Bike" HorizontalAlignment="Left" Margin="0,21,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked"/>
-                        <RadioButton x:Name="VanCheckBox" Content="Van" HorizontalAlignment="Left" Margin="0,42,0,0" VerticalAlignment="Top" Checked="VanCheckBox1_Checked"/>
-                        <RadioButton x:Name="_3wheelCheckBox" Content="ThreeWheel" Margin="0,63,0,46" Checked="_3wheelCheckBox1_Checked"/>
-                        <RadioButton x:Name="BusCheckBox" Content="Bus" HorizontalAlignment="Left" Margin="0,84,0,0" VerticalAlignment="Top" Checked="BusCheckBox1_Checked"/>
-                        <RadioButton x:Name="LorryCheckBox" Content="Lorry" HorizontalAlignment="Left" Margin="0,105,0,0" VerticalAlignment="Top" Checked="LorryCheckBox1_Checked"/>
+                        <CheckBox x:Name="CarCheckBox" Content="Car" HorizontalAlignment="Left" VerticalAlignment="Top" Checked="CarCheckBox1_Checked"/>
+                        <CheckBox x:Name="BikeCheckBox" Content="Bike" HorizontalAlignment="Left" Margin="0,21,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked"/>
+                        <CheckBox x:Name="VanCheckBox" Content="Van" HorizontalAlignment="Left" Margin="0,42,0,0" VerticalAlignment="Top" Checked="VanCheckBox1_Checked"/>
+                        <CheckBox x:Name="_3wheelCheckBox" Content="ThreeWheel" Margin="0,63,0,46" Checked="_3wheelCheckBox1_Checked"/>
+                        <CheckBox x:Name="BusCheckBox" Content="Bus" HorizontalAlignment="Left" Margin="0,84,0,0" VerticalAlignment="Top" Checked="BusCheckBox1_Checked"/>
+                        <CheckBox x:Name="LorryCheckBox" Content="Lorry" HorizontalAlignment="Left" Margin="0,105,0,0" VerticalAlignment="Top" Checked="LorryCheckBox1_Checked"/>
 
 
                     </Grid>
                 </Border>
-
 
             </Grid>
 
