--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/VehicleInUseTable.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/VehicleInUseTable.xaml
@@ -12,7 +12,7 @@
             <TextBlock HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" FontFamily="Montserrat" Text="Vehicles In Use" VerticalAlignment="Center" Width="194" Margin="109,0,0,0" FontWeight="SemiBold" FontSize="20"/>
 
         </Grid>
-        <DataGrid x:Name="VehicleInUseTable1" Margin="86,150,82,138" d:ItemsSource="{d:SampleData ItemCount=5}" BorderBrush="#FF1C6DD0" BorderThickness="2,2,2,2"/>
+        <DataGrid x:Name="VehicleInUseTable1" Margin="30,150,32,34" d:ItemsSource="{d:SampleData ItemCount=5}" BorderBrush="#FF1C6DD0" BorderThickness="2,2,2,2" CanUserDeleteRows="False" CanUserAddRows="False"/>
 
     </Grid>
 </Window>
